...
          profileViewModel.profilePicture.value = base64ToBitmap(imageCover)
        }
      }

  Scaffold(
      modifier = Modifier.testTag("editProfileScreen"),
      topBar = { ScreenTopAppBar("Edit profile", "editProfileTitle", navigationActions) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            selectedItem = navigationActions.currentRoute())
      },
      content = { paddingValues ->
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .padding(paddingValues)
                    .verticalScroll(scrollState)
                    .testTag("editProfileContent"),
            horizontalAlignment = Alignment.CenterHorizontally) {
              HorizontalDivider(color = Color.LightGray, thickness = 1.dp)

              Spacer(modifier = Modifier.height(50.dp))

              Box(
...
                    }
                  },
                  label = "Name",
                  placeholder = "Current name",
                  supportingText = "Max $MAX_USERNAME_LENGTH characters",
                  trailingIcon = Icons.Filled.Clear,
                  modifier = Modifier.testTag("editProfileNameInput"))

              Spacer(modifier = Modifier.height(16.dp))

              // Description input field
              Row {
                CustomInputField(
...
                    },
                    label = "Description",
                    placeholder = "Current description",
                    supportingText = "Max $MAX_DESCRIPTION_LENGTH characters",
                    singleLine = false,
                    trailingIcon = Icons.Filled.Clear,
                    modifier = Modifier.testTag("editProfileDescriptionInput"))
              }

              Spacer(modifier = Modifier.height(10.dp))

              // Select favorite music genres
              SelectFavoriteMusicGenres(
...

              Spacer(modifier = Modifier.height(100.dp))

              // Save button
              PrincipalButton(
                  "Save",
                  "saveProfileButton",
                  onClick = {
                    try {
                      val newData =
                          ProfileData(
                              bio = description,
                              links = profileData?.links ?: 0,
...
